# auth/internal/api/_user_update.go
@@ -1,2 +1,0 @@
-// email
-// password
